--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
           <div class="col-sm-9 col-md-4">
             <div class="card1 h-100 w-100 shadow rounded-lg p-3 p-md-2 p-lg-3 p-xl-5"
-            onclick="location.href='https://covid-19-chat-room.web.app/';"> 
+            onclick="location.href='https://covid-19-chat-room-e44c5.web.app/';"> 
               <div class="card-body text-center text-md-start"> 
                 <div class="py-3"><img class="img-fluid" src="assets/img/illustrations/emergency-care.png" height="90"
                     alt="" /></div>
